<resources>
    <string name="app_name">Android Developer Fundamentals</string>
    <string name="orange_text_view">This is an orange TextView</string>
    <string name="green_text_view">This is a green TextView</string>
    <string name="blue_text_view">This is a blue TextView</string>
    <string name="button">THIS IS A BUTTON</string>
    <string name="check_box_text">Notify me :)</string>
    <string name="switch_text">Auto backup</string>
    <string name="edit_text">This is an EditText</string>
    <string name="new_edit_text">This is a new EditText</string>
    <string name="green_button">THIS IS A GREEN BUTTON</string>
</resources>
