<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:addStatesFromChildren="true"
        android:gravity="top"
        android:layout_marginBottom="5dp"
        android:textAlignment="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/somon"
            android:padding="15dp"
            android:text="@string/orange_text_view"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/light_blue"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/green_text_view"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/greenish_blue"
            android:padding="15dp"
            android:text="@string/blue_text_view"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:addStatesFromChildren="true"
        android:gravity="bottom">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/greenish_blue"
            android:text="@string/button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:src="@mipmap/ic_launcher"
            android:layout_margin="5dp" />
1
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/green"
            android:text="@string/green_button"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_margin="5dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:addStatesFromChildren="true"
        android:background="@color/mustard"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/edit_text"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/new_edit_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:addStatesFromChildren="true"
        android:background="@color/greenish_blue"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check_box_text"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/switch_text"/>

        </RadioGroup>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="YES"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="NO"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
            </View>

        </RadioGroup>



    </LinearLayout>



</LinearLayout>

